# tree-sitter-tests-formatter

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check_lint.yml  test.yml
src/: lib.rs  main.rs  s_exp_formatter.rs
tests/: main.rs
tests/snapshots/: main__parse_test_file_1.snap  main__parse_test_file_2.snap  main__parse_test_file_3.snap  main__parse_test_file_4.snap
